# rindex

./: .gitignore  Cargo.toml  README.md
bench/: Cargo.toml
bench/benches/: bench.rs  main.rs
bench/benches/uniform/: build.rs  mod.rs  query.rs  query_radius.rs
benches/: benchmark.rs
demo/: Cargo.toml
demo/data/: knn.csv  plot.py  plot_tree.py  requirements.txt  spreader2D.csv  tree.csv
demo/src/: main.rs
lib/: Cargo.toml  README.md
lib/src/: distance.rs  index.rs  lib.rs  node.rs  rindex.rs  sphere.rs
lib/tests/: graph.rs  random.rs  reverse.rs  usage.rs
src/: index.rs  lib.rs  linear.rs  node.rs  sstree.rs
src/tree/: mod.rs  node.rs  sphere.rs  sstree copy.rs  sstree.rs
tests/: test_sstree.rs
