[package]
name = "rindex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
ordered-float = "4.1.1"

[dev-dependencies]
rand = "0.8"
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false
