[package]
name = "rindex"
version = "0.2.1"
edition = "2021"
rust-version = "1.63"
description = "Rindex: reverse nearest neighbor search index for high-dimensional clustered datasets."
readme = "README.md"
documentation = "https://docs.rs/rindex"
homepage = "https://github.com/azizkayumov/rindex"
repository = "https://github.com/azizkayumov/rindex"
license = "Apache-2.0"
keywords = ["tree", "spatial", "dynamic-index", "nearest-neighbor", "knn-graph"]
categories = ["algorithms", "data-structures"]
authors = ["Kayumov A.I. <kayumovabduaziz@gmail.com>"]
exclude = ["./github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conv = "0.3.3"
ordered-float = "4.1.1"

[dev-dependencies]
rand = "0.8"
